# url-shortening-service

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: controllers.rs  main.rs  models.rs
